set version to 1.2 added JDA command frameworks added commandframeworks added WebServer with WebSocket support added SQL ORM added EventManager added InventoryHelper added GuiInventoryManager added SOCKS proxy clients added args parser added javadocs updated JDA version